--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -23,3 +23,9 @@ input:focus, input.form-control:focus {
 .btnButton {
 	width: 10rem;
 }
+
+.p-collapseGeneral {
+	color: #941B2A;
+	border: none;
+	font-weight: 500;
+}
